# vf-gui-translation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flag_copy.sh  flag_install.sh  jsonConverter.py  zera-gui_de.ts  zera-gui_de_DE.ts  zera-gui_el_GR.ts  zera-gui_en.ts  zera-gui_en_GB.ts  zera-gui_en_US.ts  zera-gui_es_ES.ts  zera-gui_fr_FR.ts  zera-gui_it_IT.ts  zera-gui_pt_PT.ts  zera-gui_sa_SA.ts  zera-gui_uk_UA.ts
include/: zeratranslation.h  zeratranslationplugin.h
scripts/: translate-for-devel.sh
src/lib/: CMakeLists.txt  ZeraTranslationConfig.cmake.in  zeratranslation.cpp  zeratranslation.h  zeratranslation.qrc  zeratranslationplugin.cpp
src/lib/qml/: TranslationHelper.qml
src/lib/zeratranslation/: CMakeLists.txt  ZeraTranslationConfig.cmake.in  lupdate.pro  zeratranslation.cpp  zeratranslationplugin.cpp  zeratranslationwrapper.c  zeratranslationwrapper.h
translation-conversion-scripts/: CMakeLists.txt  tsTojsonConverter.py
translation-conversion-scripts/tests/: CMakeLists.txt  test_tsTojsonConverter.py
